@@ -405,6 +405,16 @@ void MoveObjCamera(GameVector* ideal, ItemInfo* camSlotId, int camMeshId, ItemIn
 	}
 }
 
+void RefreshFixedCamera(short camNumber)
+{
+	auto& camera = g_Level.Cameras[camNumber];
+
+	auto origin = GameVector(camera.Position, camera.RoomNumber);
+	int moveSpeed = camera.Speed * 8 + 1;
+
+	MoveCamera(&origin, moveSpeed);
+}
+
 void ChaseCamera(ItemInfo* item)
 {
 	if (!Camera.targetElevation)
