@@ -103,6 +103,7 @@ void ItemPushCamera(GameBoundingBox* bounds, Pose* pos, short radius);
 void ItemsCollideCamera();
 void ObjCamera(ItemInfo* camSlotId, int camMeshID, ItemInfo* targetItem, int targetMeshID, bool cond);
 void MoveObjCamera(GameVector* ideal, ItemInfo* camSlotId, int camMeshID, ItemInfo* targetItem, int targetMeshID);
+void RefreshFixedCamera(short camNumber);
 
 void SetScreenFadeOut(float speed);
 void SetScreenFadeIn(float speed);
