@@ -50,6 +50,8 @@ static constexpr char ScriptReserved_GetWet[]				= "GetWet";
 static constexpr char ScriptReserved_SetWet[]				= "SetWet";
 static constexpr char ScriptReserved_GetSprintEnergy[]		= "GetSprintEnergy";
 static constexpr char ScriptReserved_SetSprintEnergy[]		= "SetSprintEnergy";
+static constexpr char ScriptReserved_GetAirborne[]			= "GetAirborne";
+static constexpr char ScriptReserved_SetAirborne[]			= "SetAirborne";
 static constexpr char ScriptReserved_GetAmmoCount[]			= "GetAmmoCount";
 static constexpr char ScriptReserved_GetVehicle[]			= "GetVehicle";
 static constexpr char ScriptReserved_GetTarget[]			= "GetTarget";
@@ -92,6 +94,8 @@ static constexpr char ScriptReserved_GetAIBits[]			= "GetAIBits";
 static constexpr char ScriptReserved_SetAIBits[]			= "SetAIBits";
 static constexpr char ScriptReserved_GetItemFlags[]			= "GetItemFlags";
 static constexpr char ScriptReserved_SetItemFlags[]			= "SetItemFlags";
+static constexpr char ScriptReserved_GetLocationAI[]		= "GetLocationAI";
+static constexpr char ScriptReserved_SetLocationAI[]		= "SetLocationAI";
 static constexpr char ScriptReserved_GetMeshVisable[]		= "GetMeshVisable";
 static constexpr char ScriptReserved_SetMeshVisible[]		= "SetMeshVisible";
 static constexpr char ScriptReserved_ShatterMesh[]			= "ShatterMesh";
