@@ -79,6 +79,7 @@ Vec3 CameraObject::GetPos() const
 void CameraObject::SetPos(Vec3 const& pos)
 {
 	m_camera.Position = Vector3i(pos.x, pos.y, pos.z);
+	RefreshFixedCamera(m_camera.Index);
 }
 
 std::string CameraObject::GetName() const
