@@ -11,6 +11,11 @@ Version 1.0.7
 	- 2 – Tower Mode. Behaviour matched from Tomb Raider III. Invincible unless triggered to be killed.
 	- 6 – Tower Mode with Volumes. Same as Tower Mode but Sophia’s ascent can be controlled using volumes in Tomb Editor.
 
+Lua API Changes
+* Fix Camera:SetPosition not updating camera position when it is played simultaneously.
+* Add Moveable:GetAirborne and Moveable:SetAirborne.
+* Add Moveable:GetLocationAI and Moveable:SetLocationAI.
+
 Version 1.0.6
 =============
 
@@ -55,10 +60,12 @@ Lua API changes
 * Moveable:MeshIsVisible is now GetMeshVisible.
 * Moveable:SetMeshVisible has been added to replace ShowMesh/HideMesh.
 * Moveable:MeshIsSwapped is now GetMeshSwapped
+* Camera:SetPosition now updates the position if it's called while it's being played.
 * Primitive Classes (Color, Rotation, Vec3) can now be saved via Levelvars and Gamevars variables.
 * OnSave function now gets called just before data is saved, rather than just after.
 * Add new function CameraObject::PlayCamera()
 * Add new function Misc::GetCameraType()
+* Add new functions Moveable:GetAirborne() and Moveable:SetAirborne(bool input)
 
 Version 1.0.5 
 =============
